<resources>
    <string name="app_name">Equipo Realtime Firebase</string>
    <string name="addviaje">Añadir Viaje</string>
    <string name="idviaje">Identificador del Viaje</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="precio">Precio</string>
    <string name="insertar_viaje">Insertar Viaje</string>
    <string name="todo">TODO</string>
    <string name="cambiar_n_imagen">Cambiar \n Imagen</string>
    <string name="mostrar_viajes">Mostrar Viajes</string>
    <string name="identificador_viaje">identificador viaje</string>
    <string name="foto_estudiante">foto estudiante</string>
    <string name="email">Email</string>
    <string name="clave">Clave</string>
    <string name="loguearse">loguearse</string>
    <string name="registrarse">registrarse</string>
    <string name="salir">salir</string>
</resources>