<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarDetallesViajeActivity">


    <EditText
        android:id="@+id/edt_detalles_destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/destino"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalles_origen"
        app:layout_constraintStart_toStartOf="@+id/edt_detalles_origen"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalles_origen"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_detalles_idviaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/idviaje"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_detalles_origen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/origen"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalles_idviaje"
        app:layout_constraintStart_toStartOf="@+id/edt_detalles_idviaje"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalles_idviaje" />

    <EditText
        android:id="@+id/edt_detalles_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalles_destino"
        app:layout_constraintStart_toStartOf="@+id/edt_detalles_destino"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalles_destino" />

    <ImageView
        android:id="@+id/img_detalles_foto"
        android:layout_width="232dp"
        android:layout_height="175dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalles_precio"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/edt_detalles_precio"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalles_precio"
        app:srcCompat="@drawable/foto_viaje2" />

    <Button
        android:id="@+id/bt_detalles_borrar_viaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:onClick="borrar_viaje"
        android:text="BORRAR VIAJE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_detalles_actualizar_viajes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="48dp"
        android:onClick="Actualizar_viaje"
        android:text="ACTUALIZAR VIAJE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_detalles_borrar_viaje" />

</androidx.constraintlayout.widget.ConstraintLayout>